# cesar_len_pass_vault

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  buildozer.spec  main.py  pyinstaller.spec  pyproject.toml  ruff.toml
.github/workflows/: build-apk.yml  build-exe.yml
app/: main.kv  main.py  utils.py
app/popups/: __init__.py  add_entry.kv  add_entry.py  settings.kv  settings.py  sync.kv  sync.py
app/screens/: add_entry.kv  add_entry.py  settings_popup.py  setup.kv  setup.py  unlock.kv  unlock.py  vault.kv  vault.py
app/services/: __init__.py  vault_ops.py
app/widgets/: toolbar.py
images/: source.html
src/cesar_len_pass_vault/: __init__.py  cipher_primary.py  cipher_wrapper.py  config.py  crypto_utils.py  enums.py  exceptions.py  models.py  storage.py  sync.py
tests/: test_cipher_wrapper.py  test_models.py  test_storage.py  test_sync.py
