[project]
name = "cesar-len-pass-vault"
version = "0.1.0"
description = "Password vault with manual cloud sync. Uses cesar_len_key cipher."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "cesar-len-key @ git+https://github.com/UmbrellaLeaf5/cesar_len_key",
  "kivy>=2.3",
  "yadisk>=3.4",
  "python-dotenv>=1.2",
  "kivy-deps-sdl2>=0.8.0",
  "kivy-deps-glew>=0.3.1",
  "kivy-deps-angle>=0.4.0",
  "pyinstaller>=6.20.0",
]

[dependency-groups]
dev = [
  "pytest>=9",
  "ruff",
  "pyright",
  "pyinstaller>=6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cesar_len_pass_vault", "app"]

[project.scripts]
cesar-vault = "main:main"
